--- a/Section-02-CSS/Week-03/01_11_2023/06_General/css/site.css
+++ b/Section-02-CSS/Week-03/01_11_2023/06_General/css/site.css
@@ -9,9 +9,9 @@
 }
 
 :root {
-    --darkorange-color: rgb(255, 91, 34);
-    --lightorange-color: rgb(255, 145, 48);
-    --cream-color: rgb(254, 205, 166);
+    --prime-color: #363062;
+    --second-color: #363062;
+    --third-color: #f99417;
     --grey-color: rgb(169, 169, 169);
     --black-color: #000000;
     --white-color: #FFFFFF;
@@ -36,7 +36,7 @@ a {
     justify-content: space-between;
     height: 100px;
     align-items: center;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     /* background-color: yellow; */
 }
 
@@ -44,6 +44,7 @@ a {
 
     font-size: 45px;
     font-weight: 500;
+    color: var(--third-color);
     /* background-color: aqua; */
 }
 
@@ -76,36 +77,82 @@ a {
     height: 100%;
     width: 100%;
     /* padding: 5px 8px; */
-    border: 1px solid black;
     justify-content: center;
     align-items: center;
+    color: var(--third-color);
     /* height: 30px; */
 }
 
 .main-nav-item a:hover {
     background-color: var(--cream-color);
-    color: #000000;
+    border: 1px solid black;
+    color: var(--third-color);
 }
 
 .main {
     height: 400px;
-    border: 1px solid black
+    /* border: 1px solid black */
 }
 
-#show-case {
-    height: 400px;
+#show-case-content {
+    height: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /* background-image: url("/images/home-bg.jpeg"); */
+    /* background-repeat: no-repeat; */
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 40%;
+    border-radius: 40px;
+
+
 }
 
 #show-case h2 {
     font-size: 80px;
     font-weight: 300;
     color: var(--grey-color);
+
 }
 
 #show-case h3 {
-    color: var(--black-color);
+    color: var(--grey-color);
+}
+
+#show-case {
+    /* ======================== */
+    background: linear-gradient(to top left, rgba(0, 0, 0, 0.09), rgba(0, 0, 0, 0.56)), url("/images/home-bg.jpeg");
+    /* ======================== */
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.how-it-works {
+    display: flex;
+    gap: 50px;
+    padding: 35px;
+}
+
+.how-it-works-item {
+    height: 400px;
+    border: 1px solid black;
+    padding: 25px;
+
+}
+
+.how-it-works-item p {
+    margin-top: 15px;
+}
+
+.fa-regular {
+    width: 100%;
+    font-size: 50px;
+    color: var(--third-color);
+    margin: 15px;
+    text-align: center;
 }
