evde renk değişimi

--- a/Section-02-CSS/Week-03/01_11_2023/06_General/css/site.css
+++ b/Section-02-CSS/Week-03/01_11_2023/06_General/css/site.css
@@ -84,9 +84,10 @@ a {
 }
 
 .main-nav-item a:hover {
-    background-color: var(--cream-color);
+    background-color: var(--prime-color);
     border: 1px solid black;
     color: var(--third-color);
+    border-radius: 10px;
 }
 
 .main {
