--- a/Section-04-Javascript/Week-06/23-11-2023/19-calculator/style.css
+++ b/Section-04-Javascript/Week-06/23-11-2023/19-calculator/style.css
@@ -23,7 +23,7 @@ body {}
 
 .container-filter {
     height: 100%;
-    /* background-color: white; */
+    background-color: rgba(255, 255, 255, 0.95);
 
 }
 
