--- a/Section-09-MVC/Week-12/06-01-2024/Proje06_MvcWithSql/Views/Shared/_CategoriesPartial.cshtml
+++ b/Section-09-MVC/Week-12/06-01-2024/Proje06_MvcWithSql/Views/Shared/_CategoriesPartial.cshtml
@@ -1,8 +1,8 @@
 @model List<CategoryViewModel>
 <div class="list-group">
-    @foreach (var c in categoryList)
+    @foreach (var c in Model)
     {
-        <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+        <a href="#" class="list-group-item list-group-item-action" aria-current="true">
             @c.Name
         </a>
     }
