--- a/Section-09-MVC/Week-13/11-01-2024/MiniShop/MiniShop.Mvc/Views/Home/Index.cshtml
+++ b/Section-09-MVC/Week-13/11-01-2024/MiniShop/MiniShop.Mvc/Views/Home/Index.cshtml
@@ -1,9 +1,23 @@
-﻿@{
+﻿@model List<ProductViewModel>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row">
+        @foreach (var p in Model)
+        {
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="~/images/@p.ImageUrl" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@p.Name</h5>
+                        <p class="card-text">@p.Properties</p>
+                        <p class="card-text">@p.Price</p>
+                        <a href="#" class="btn btn-primary">Detay</a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
-
