--- a/Section-10-API/Week-15/24-01-2024/MiniShopUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Section-10-API/Week-15/24-01-2024/MiniShopUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AdminLTE 3 | Dashboard</title>
     @await Html.PartialAsync("_Styles")
+    @await RenderSectionAsync("Styles", false)
 </head>
 
 <body class="hold-transition sidebar-mini layout-fixed">
@@ -18,6 +19,7 @@
     </div>
     <!-- ./wrapper -->
     @await Html.PartialAsync("_Scripts")
+    @await RenderSectionAsync("Scripts", false)
 </body>
 
 </html>
