--- a/Section-10-API/Week-15/27-01-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/SidebarUserPanel/Default.cshtml
+++ b/Section-10-API/Week-15/27-01-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/SidebarUserPanel/Default.cshtml
@@ -4,6 +4,6 @@
         <img src="~/admin/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
     </div>
     <div class="info">
-        <a href="#" class="d-block">Çağdaş Taş</a>
+        <a href="#" class="d-block">Engin Niyazi Ergül</a>
     </div>
 </div>
