ders arası hata bulmaca

--- a/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
@@ -112,6 +112,8 @@
     <!-- Summernote -->
     <script src="../../plugins/summernote/summernote-bs4.min.js"></script>
     <script>
-        $('#Properties').summernote()
+        $('#Properties').summernote({
+            height: 200
+        })
     </script>
 }
