--- a/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model DeleteProductViewModel
- <!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -37,9 +37,11 @@
                         <span>@Model.ModifiedDate</span>
                     </div>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a class="btn btn-info">Vazgeç</a>
-                        <a class="btn btn-danger">Kalıcı Olarak Sil</a>
-                        <a class="btn btn-warning">Çöp Kutusuna Gönder</a>
+                        <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-info">Vazgeç</a>
+                        <a asp-area="Admin" asp-controller="Product" asp-action="HardDelete" asp-route-id="@Model.Id"
+                            class="btn btn-danger">Kalıcı Olarak Sil</a>
+                        <a asp-area="Admin" asp-controller="Product" asp-action="SoftDelete" asp-route-id="@Model.Id"
+                            class="btn btn-warning">Çöp Kutusuna Gönder</a>
                     </div>
                 </div>
             </div>
@@ -48,14 +50,14 @@
 </div>
 
 
-@section Styles{
+@section Styles {
     <!-- iCheck for checkboxes and radio inputs -->
     <link rel="stylesheet" href="~/admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- summernote -->
     <link rel="stylesheet" href="../../plugins/summernote/summernote-bs4.min.css">
 }
 
-@section Scripts{
+@section Scripts {
     <!-- Summernote -->
     <script src="../../plugins/summernote/summernote-bs4.min.js"></script>
     <script>
