--- a/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -33,7 +33,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Product" asp-action="Index" asp-route-id="false" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Ürün Listesi</p>
                             </a>
@@ -45,7 +45,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/layout/boxed.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Product" asp-action="Index" asp-route-id="true" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Çöp Kutusu</p>
                             </a>
