--- a/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@model AddProductViewModel
- <!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -16,38 +16,36 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <form
-                        asp-area="Admin"
-                        asp-controller="Product"
-                        asp-action="Create"
-                        method="post"
-                    >
-                    <!--Ürün Bilgileri-->
-                    <div class="card card-success">
-                        <div class="card-header">
-                            <h3 class="card-title">Ürün Bilgileri</h3>
-                        </div>
-                        <div class="card-body">
-                            
+                    <form asp-area="Admin" asp-controller="Product" asp-action="Create" method="post">
+                        <!--Ürün Bilgileri-->
+                        <div class="card card-success">
+                            <div class="card-header">
+                                <h3 class="card-title">Ürün Bilgileri</h3>
+                            </div>
+                            <div class="card-body">
+
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="form-group">
                                             <label asp-for="Name"></label>
-                                            <input asp-for="Name" type="text" class="form-control" placeholder="Ürün adını giriniz...">
+                                            <input asp-for="Name" type="text" class="form-control"
+                                                placeholder="Ürün adını giriniz...">
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-sm-6">
                                         <div class="form-group">
                                             <label asp-for="Price"></label>
-                                            <input asp-for="Price" type="text" class="form-control" placeholder="Ürün fiyatını giriniz...">
+                                            <input asp-for="Price" type="text" class="form-control"
+                                                placeholder="Ürün fiyatını giriniz...">
                                             <span asp-validation-for="Price" class="text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-sm-8">
                                         <div class="form-group">
                                             <label asp-for="ImageUrl"></label>
-                                            <input asp-for="ImageUrl" type="text" class="form-control" placeholder="Ürün resminin urlini giriniz...">
+                                            <input asp-for="ImageUrl" type="text" class="form-control"
+                                                placeholder="Ürün resminin urlini giriniz...">
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
@@ -80,15 +78,14 @@
                                 @foreach (var c in Model.Categories)
                                 {
                                     <div class="icheck-primary d-inline mr-3">
-                                        <input name="categoryIds" value="@c.Id" id="category_checkbox_@c.Id" type="checkbox" 
-                                        @(Model.CategoryIds.Any(catId=>catId==c.Id) ? "checked" : "")
-                                        />
+                                        <input name="categoryIds" value="@c.Id" id="category_checkbox_@c.Id" type="checkbox"
+                                        @(Model.CategoryIds.Any(catId => catId == c.Id) ? "checked" : "") />
                                         <label for="category_checkbox_@c.Id">@c.Name</label>
                                     </div>
                                 }
                                 <div class="text-danger mt-2">@ViewBag.CategoryErrorMessage</div>
                             </div>
-                            
+
                         </div>
                         <div class="mb-3">
                             <button type="submit" class="btn btn-primary btn-lg btn-block">Kaydet</button>
@@ -101,19 +98,19 @@
 </div>
 
 
-@section Styles{
+@section Styles {
     <!-- iCheck for checkboxes and radio inputs -->
     <link rel="stylesheet" href="~/admin/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- summernote -->
     <link rel="stylesheet" href="../../plugins/summernote/summernote-bs4.min.css">
 }
 
-@section Scripts{
+@section Scripts {
     <!-- Summernote -->
     <script src="../../plugins/summernote/summernote-bs4.min.js"></script>
     <script>
         $('#Properties').summernote({
-            height: 200
+            height: 100
         })
     </script>
 }
