--- a/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Index.cshtml
+++ b/Section-10-API/Week-16/30-01-2024/MiniShopUI/Areas/Admin/Views/Product/Index.cshtml
@@ -1,19 +1,27 @@
 ﻿@model List<ProductViewModel>
- <!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
         <div class="container-fluid">
             <div class="d-flex justify-content-between mb-2">
                 <div>
-                    <h1>Ürün Listesi</h1>
+                    <h1>Ürün Listesi @(ViewBag.ShowDeleted ? " / Çöp Kutusu" : "")</h1>
                 </div>
                 <div>
-                    <a 
-                        asp-area="Admin"
-                        asp-controller="Product"
-                        asp-action="Create"
-                        class="btn btn-success btn-sm">Ürün Ekle</a>
+                    @if (ViewBag.ShowDeleted)
+                    {
+                        <a asp-area="Admin" asp-controller="Product" asp-action="Index" asp-route-id="false"
+                            class="btn btn-primary btn-sm">Ürün Listesi</a>
+                    }
+                    else
+                    {
+                        <a asp-area="Admin" asp-controller="Product" asp-action="Create" class="btn btn-success btn-sm">Yeni
+                            Ürün Ekle</a>
+                        <a asp-area="Admin" asp-controller="Product" asp-action="Index" asp-route-id="true"
+                            class="btn btn-danger btn-sm">Çöp Kutusu</a>
+
+                    }
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -44,24 +52,16 @@
                                         <tr>
                                             <td>@p.Id</td>
                                             <td>
-                                                <a asp-area="Admin"
-                                                   asp-controller="Product"
-                                                   asp-action="Edit"
-                                                   asp-route-id="@p.Id"
-                                                   class="btn btn-link">@p.Name</a>
+                                                <a asp-area="Admin" asp-controller="Product" asp-action="Edit"
+                                                    asp-route-id="@p.Id" class="btn btn-link">@p.Name</a>
                                             </td>
                                             <td>@p.Price</td>
                                             <td>
-                                                <form 
-                                                    id="isHomeForm_@p.Id"
-                                                    asp-area="Admin"
-                                                    asp-controller="Product"
-                                                    asp-action="UpdateIsHome"
-                                                    asp-route-id="@p.Id"
-                                                    method="post"
-                                                >
+                                                <form id="isHomeForm_@p.Id" asp-area="Admin" asp-controller="Product"
+                                                    asp-action="UpdateIsHome" asp-route-id="@p.Id" method="post">
                                                     <div class="custom-control custom-switch">
-                                                        <input onchange="document.getElementById('isHomeForm_@p.Id').submit();"
+                                                        <input
+                                                            onchange="document.getElementById('isHomeForm_@p.Id').submit();"
                                                             type="checkbox" class="custom-control-input" id="isHome_@p.Id"
                                                         @(p.IsHome ? "checked" : "") />
                                                         <label class="custom-control-label" for="isHome_@p.Id"></label>
@@ -70,14 +70,8 @@
 
                                             </td>
                                             <td>
-                                                <form
-                                                    id="isActiveForm_@p.Id"
-                                                    asp-area="Admin"
-                                                    asp-controller="Product"
-                                                    asp-action="UpdateIsActive"
-                                                    asp-route-id="@p.Id"
-                                                    method="post"
-                                                >
+                                                <form id="isActiveForm_@p.Id" asp-area="Admin" asp-controller="Product"
+                                                    asp-action="UpdateIsActive" asp-route-id="@p.Id" method="post">
                                                     <div class="custom-control custom-switch">
                                                         <input
                                                             onchange="document.getElementById('isActiveForm_@p.Id').submit();"
@@ -89,16 +83,25 @@
 
                                             </td>
                                             <td class="text-center">
-                                                <a asp-area="Admin"
-                                                   asp-controller="Product"
-                                                   asp-action="Edit"
-                                                   asp-route-id="@p.Id"
-                                                   class="btn btn-warning btn-sm"><i class="far fa-edit"></i></a>
-                                                <a asp-area="Admin"
-                                                   asp-controller="Product"
-                                                   asp-action="Delete"
-                                                   asp-route-id="@p.Id"
-                                                   class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
+                                                @if (!ViewBag.ShowDeleted)
+                                                {
+                                                    <a asp-area="Admin" asp-controller="Product" asp-action="Edit"
+                                                        asp-route-id="@p.Id" class="btn btn-warning btn-sm"><i
+                                                            class="far fa-edit"></i></a>
+                                                    <a asp-area="Admin" asp-controller="Product" asp-action="Delete"
+                                                        asp-route-id="@p.Id" class="btn btn-danger btn-sm"><i
+                                                            class="fas fa-trash"></i></a>
+                                                }
+                                                else
+                                                {
+                                                    <a asp-area="Admin" asp-controller="Product" asp-action="SoftDelete"
+                                                        asp-route-id="@p.Id" class="btn btn-success btn-sm"><i
+                                                            class="fas fa-undo-alt"></i></a>
+                                                    <a asp-area="Admin" asp-controller="Product" asp-action="HardDelete"
+                                                        asp-route-id="@p.Id" class="btn btn-danger btn-sm"><i
+                                                            class="fas fa-trash"></i></a>
+                                                }
+
                                             </td>
                                         </tr>
                                     }
@@ -121,10 +124,10 @@
 <!-- /.content-wrapper -->
 
 
-@section Styles{
+@section Styles {
     @await Html.PartialAsync("_DataTablesCssPartial")
 }
 
-@section Scripts{
+@section Scripts {
     @await Html.PartialAsync("_DataTablesJsPartial")
 }
