Ders sonu, API'a resim ekleme eklendi.

--- a/Section-10-API/Week-16/01-02-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/Section-10-API/Week-16/01-02-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
@@ -44,8 +44,7 @@
                                     <div class="col-sm-8">
                                         <div class="form-group">
                                             <label asp-for="ImageUrl"></label>
-                                            <input asp-for="ImageUrl" type="text" class="form-control"
-                                                placeholder="Ürün resminin urlini giriniz...">
+                                            <input asp-for="ImageUrl" type="file" class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
