--- a/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Product/Index.cshtml
+++ b/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Product/Index.cshtml
@@ -39,6 +39,7 @@
                                 <thead>
                                     <tr>
                                         <th>Id</th>
+                                        <th>Resim</th>
                                         <th>Ürün</th>
                                         <th>Fiyat</th>
                                         <th>Ana Sayfa</th>
@@ -51,6 +52,10 @@
                                     {
                                         <tr>
                                             <td>@p.Id</td>
+                                            <td>
+                                                <img src="http://localhost:7700/images/products/@p.ImageUrl" alt="@p.Name image"
+                                                    style="width: 50px;">
+                                            </td>
                                             <td>
                                                 <a asp-area="Admin" asp-controller="Product" asp-action="Edit"
                                                     asp-route-id="@p.Id" class="btn btn-link">@p.Name</a>
