--- a/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
+++ b/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Product/Create.cshtml
@@ -16,7 +16,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <form asp-area="Admin" asp-controller="Product" asp-action="Create" method="post">
+                    <form asp-area="Admin" asp-controller="Product" asp-action="Create" method="post"
+                        enctype="multipart/form-data">
                         <!--Ürün Bilgileri-->
                         <div class="card card-success">
                             <div class="card-header">
@@ -25,7 +26,7 @@
                             <div class="card-body">
 
                                 <div class="row">
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-4">
                                         <div class="form-group">
                                             <label asp-for="Name"></label>
                                             <input asp-for="Name" type="text" class="form-control"
@@ -33,18 +34,12 @@
                                             <span asp-validation-for="Name" class="text-danger"></span>
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
+                                    <div class="col-sm-4">
                                         <div class="form-group">
                                             <label asp-for="Price"></label>
                                             <input asp-for="Price" type="text" class="form-control"
                                                 placeholder="Ürün fiyatını giriniz...">
                                             <span asp-validation-for="Price" class="text-danger"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-8">
-                                        <div class="form-group">
-                                            <label asp-for="ImageUrl"></label>
-                                            <input asp-for="ImageUrl" type="file" class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-sm-4">
@@ -60,11 +55,27 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-12">
+                                    <div class="col-sm-9">
                                         <label asp-for="Properties"></label>
                                         <textarea asp-for="Properties"></textarea>
                                         <span asp-validation-for="Properties" class="text-danger"></span>
                                     </div>
+
+
+                                    <div class="col-sm-3">
+                                        <div class="form-group">
+                                            <label>Ürün Resmi</label>
+                                            <input id="image" name="image" type="file" class="d-none"
+                                                accept="image/png, image/jpg, image/jpeg" />
+                                            <div class="mt-2">
+                                                <label class="btn btn-success" for="image">Ürün Resmi Yükle</label>
+                                            </div>
+                                            <span class="text-danger">@ViewBag.ImageErrorMessage</span>
+                                            <img id="image-viewer" class="img-fluid" style="height: 200px;" />
+                                        </div>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
@@ -106,4 +117,18 @@
 
 @section Scripts {
     @await Html.PartialAsync("_SummerNotePartial")
+    <script>
+
+
+        @*
+        JQuery olmasaydı yazmamız gerekenler.
+
+        document.getElementById("image").addEventListener("change",function(){
+
+        }) *@
+            $("#image").on("change", function (e) {
+                const selectedFiles = e.target.files;
+                $("#image-viewer").attr("src", window.URL.createObjectURL(selectedFiles[0]));
+            })
+    </script>
 }
