--- a/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Section-10-API/Week-16/03-02-2024/MiniShopUI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -68,13 +68,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/charts/flot.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Category" asp-action="Create" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Yeni Kategori</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/charts/inline.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Category" asp-action="Index" asp-route-id="true"  class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Çöp Kutusu</p>
                             </a>
