Identity ve authentication yapiliyor/

--- a/Section-11-Identity/Week-17/10-02-2024/MiniShop/MiniShop.UI/Views/Shared/_OffcanvasMenuPartial.cshtml
+++ b/Section-11-Identity/Week-17/10-02-2024/MiniShop/MiniShop.UI/Views/Shared/_OffcanvasMenuPartial.cshtml
@@ -16,8 +16,9 @@
     </div>
     <div id="mobile-menu-wrap"></div>
     <div class="offcanvas__auth">
-        <a href="#">Login</a>
-        <a href="#">Register</a>
+        
+                        <a asp-area="" asp-controller="Account" asp-action="Login">Giriş Yap</a>
+                        <a asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
     </div>
 </div>
 <!-- Offcanvas Menu End -->
