--- a/Section-11-Identity/Week-17/10-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/Section-11-Identity/Week-17/10-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -10,28 +10,45 @@
             <div class="col-xl-6 col-lg-7">
                 <nav class="header__menu">
                     <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="#">Women’s</a></li>
-                        <li><a href="#">Men’s</a></li>
-                        <li><a href="./shop.html">Shop</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="dropdown">
-                                <li><a href="./product-details.html">Product Details</a></li>
-                                <li><a href="./shop-cart.html">Shop Cart</a></li>
-                                <li><a href="./checkout.html">Checkout</a></li>
-                                <li><a href="./blog-details.html">Blog Details</a></li>
-                            </ul>
+                        <li class="active">
+                            <a asp-area="" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                         </li>
-                        <li><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contact</a></li>
+                        <li>
+                            <a >Tüm Ürünler</a>
+                        </li>
+                        <li>
+                            <a >Kategoriler</a>
+                        </li>
+                        <li>
+                            <a >Kampanyalar</a>
+                        </li>
+                        @* <li> *@
+                        @*     <a href="#">Pages</a> *@
+                        @*     <ul class="dropdown"> *@
+                        @*         <li><a href="./product-details.html">Product Details</a></li> *@
+                        @*         <li><a href="./shop-cart.html">Shop Cart</a></li> *@
+                        @*         <li><a href="./checkout.html">Checkout</a></li> *@
+                        @*         <li><a href="./blog-details.html">Blog Details</a></li> *@
+                        @*     </ul> *@
+                        @* </li> *@
+                        @* <li><a href="./blog.html">Blog</a></li> *@
+                        <li><a href="./contact.html">İletişim</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="col-lg-3">
                 <div class="header__right">
                     <div class="header__right__auth">
-                        <a href="#">Login</a>
-                        <a href="#">Register</a>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <a asp-area="" asp-controller="Account" asp-action="Login">Giriş Yap</a>
+                            <a asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
+                        }
+                        else
+                        {
+                            <a asp-area="" asp-controller="Account" asp-action="Profile">Hesabım</a>
+                            <a asp-area="" asp-controller="Account" asp-action="Logout">Çıkış</a>
+                        }
                     </div>
                     <ul class="header__right__widget">
                         <li><span class="icon_search search-switch"></span></li>
