Rider üzerinden ilk comit denemesi

--- a/Section-11-Identity/Week-17/11-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
+++ b/Section-11-Identity/Week-17/11-02-2024/MiniShop/MiniShop.UI/Areas/Admin/Views/Shared/Components/MainSidebar/Default.cshtml
@@ -91,30 +91,29 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="pages/UI/general.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="User" asp-action="Index" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Yeni Kullanıcılar</p>
+                                <p>Kullanıcı Listesi</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/UI/icons.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="Role" asp-action="Index" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Rol Listesi</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-area="Admin" asp-controller="User" asp-action="GetAdminUsers" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Yöneticiler</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/UI/buttons.html" class="nav-link">
+                            <a asp-area="Admin" asp-controller="User" asp-action="GetCustomerUsers" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Müşteriler</p>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a href="pages/UI/sliders.html" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Rol Atama</p>
-                            </a>
-                        </li>
-
                     </ul>
                 </li>
                 <li class="nav-item">
