--- a/Section-11-Identity/Week-17/11-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
+++ b/Section-11-Identity/Week-17/11-02-2024/MiniShop/MiniShop.UI/Views/Shared/_HeaderSectionPartial.cshtml
@@ -46,6 +46,10 @@
                         }
                         else
                         {
+                            if (User.IsInRole("SuperAdmin")||User.IsInRole("Admin"))
+                            {
+                                <a asp-area="Admin" asp-controller="Home" asp-action="Index">Admin Panel</a>
+                            }
                             <a asp-area="" asp-controller="Account" asp-action="Profile">Hesabım</a>
                             <a asp-area="" asp-controller="Account" asp-action="Logout">Çıkış</a>
                         }
